# alpaka

./: .gitignore  AbsCudaBuiltIn_8hpp.html  AbsCudaBuiltIn_8hpp_source.html  AbsHipBuiltIn_8hpp.html  AbsHipBuiltIn_8hpp_source.html  AbsStdLib_8hpp.html  AbsStdLib_8hpp_source.html  AbsUniformCudaHipBuiltIn_8hpp.html  AbsUniformCudaHipBuiltIn_8hpp_source.html  AccCpuFibers_8hpp.html  AccCpuFibers_8hpp_source.html  AccCpuOmp2Blocks_8hpp.html  AccCpuOmp2Blocks_8hpp_source.html  AccCpuOmp2Threads_8hpp.html  AccCpuOmp2Threads_8hpp_source.html  AccCpuOmp4_8hpp.html  AccCpuOmp4_8hpp_source.html  AccCpuSerial_8hpp.html  AccCpuSerial_8hpp_source.html  AccCpuTbbBlocks_8hpp.html  AccCpuTbbBlocks_8hpp_source.html  AccCpuThreads_8hpp.html  AccCpuThreads_8hpp_source.html  AccDevProps_8hpp.html  AccDevProps_8hpp_source.html  AccGpuCudaRt_8hpp.html  AccGpuCudaRt_8hpp_source.html  AccGpuHipRt_8hpp.html  AccGpuHipRt_8hpp_source.html  AccGpuUniformCudaHipRt_8hpp.html  AccGpuUniformCudaHipRt_8hpp_source.html  AccOacc_8hpp.html  AccOacc_8hpp_source.html  AccOmp5_8hpp.html  AccOmp5_8hpp_source.html  Accessors_8hpp.html  Accessors_8hpp_source.html  AcosCudaBuiltIn_8hpp.html  AcosCudaBuiltIn_8hpp_source.html  AcosHipBuiltIn_8hpp.html  (+5079 more)
cmake/: alpakaCommon.cmake
example/bufferCopy/src/: bufferCopy.cpp
example/heatEquation/src/: heatEquation.cpp
example/monteCarloIntegration/src/: monteCarloIntegration.cpp
example/reduce/src/: alpakaConfig.hpp  iterator.hpp  kernel.hpp  reduce.cpp
example/vectorAdd/src/: vectorAdd.cpp
include/alpaka/: alpaka.hpp
include/alpaka/acc/: AccCpuSyclIntel.hpp  AccFpgaSyclIntel.hpp  AccFpgaSyclXilinx.hpp  AccGenericSycl.hpp  AccGpuSyclIntel.hpp  AccSycl.hpp  AccUniformSycl.hpp
include/alpaka/atomic/: AtomicGenericSycl.hpp  AtomicSycl.hpp  AtomicUniformSycl.hpp
include/alpaka/block/sync/: BlockSyncGenericSycl.hpp  BlockSyncSycl.hpp
include/alpaka/core/: Assert.hpp  BoostPredef.hpp  Common.hpp  Sycl.hpp
include/alpaka/dev/: DevCpuSyclIntel.hpp  DevFpgaSyclIntel.hpp  DevFpgaSyclXilinx.hpp  DevGenericSycl.hpp  DevGpuSyclIntel.hpp  DevSycl.hpp  DevUniformSycl.hpp
include/alpaka/event/: EventCpuSyclIntel.hpp  EventFpgaSyclIntel.hpp  EventFpgaSyclXilinx.hpp  EventGenericSycl.hpp  EventGpuSyclIntel.hpp  EventSycl.hpp
include/alpaka/example/: ExampleDefaultAcc.hpp
include/alpaka/idx/bt/: IdxBtGenericSycl.hpp  IdxBtSycl.hpp  IdxBtSyclBuiltIn.hpp
include/alpaka/idx/gb/: IdxGbGenericSycl.hpp  IdxGbSycl.hpp  IdxGbSyclBuiltIn.hpp  IdxGbSyclBultIn.hpp
include/alpaka/intrinsic/: IntrinsicGenericSycl.hpp
include/alpaka/kernel/: TaskKernelCpuSyclIntel.hpp  TaskKernelFpgaSyclIntel.hpp  TaskKernelFpgaSyclXilinx.hpp  TaskKernelGenericSycl.hpp  TaskKernelGpuSyclIntel.hpp  TaskKernelSycl.hpp  TaskKernelUniformSycl.hpp  Traits.hpp
include/alpaka/math/: MathGenericSycl.hpp  MathSycl.hpp  MathSyclBuiltIn.hpp  MathUniformSycl.hpp
include/alpaka/math/abs/: AbsGenericSycl.hpp  AbsSycl.hpp  AbsSyclBuiltIn.hpp  AbsUniformSycl.hpp
include/alpaka/math/acos/: AcosGenericSycl.hpp  AcosSycl.hpp  AcosSyclBuiltIn.hpp  AcosUniformSycl.hpp
include/alpaka/math/asin/: AsinGenericSycl.hpp  AsinSycl.hpp  AsinSyclBuiltIn.hpp  AsinUniformSycl.hpp  AtanSycl.hpp
include/alpaka/math/atan/: AtanGenericSycl.hpp  AtanSycl.hpp  AtanSyclBuiltIn.hpp  AtanUniformSycl.hpp
include/alpaka/math/atan2/: Atan2GenericSycl.hpp  Atan2Sycl.hpp  Atan2SyclBuiltIn.hpp  Atan2UniformSycl.hpp
include/alpaka/math/cbrt/: CbrtGenericSycl.hpp  CbrtSycl.hpp  CbrtSyclBuiltIn.hpp  CbrtUniformSycl.hpp
include/alpaka/math/ceil/: CeilGenericSycl.hpp  CeilSycl.hpp  CeilSyclBuiltIn.hpp  CeilUniformSycl.hpp
include/alpaka/math/cos/: CosGenericSycl.hpp  CosSycl.hpp  CosSyclBuiltIn.hpp  CosUniformSycl.hpp
include/alpaka/math/erf/: ErfGenericSycl.hpp  ErfSycl.hpp  ErfSyclBuiltIn.hpp  ErfUniformSycl.hpp
include/alpaka/math/exp/: ExpGenericSycl.hpp  ExpSycl.hpp  ExpSyclBuiltIn.hpp  ExpUniformSycl.hpp
include/alpaka/math/floor/: FloorGenericSycl.hpp  FloorSycl.hpp  FloorSyclBuiltIn.hpp  FloorUniformSycl.hpp
include/alpaka/math/fmod/: FmodGenericSycl.hpp  FmodSycl.hpp  FmodSyclBuiltIn.hpp  FmodUniformSycl.hpp
include/alpaka/math/log/: LogGenericSycl.hpp  LogSycl.hpp  LogSyclBuiltIn.hpp  LogUniformSycl.hpp
include/alpaka/math/max/: MaxGenericSycl.hpp  MaxSycl.hpp  MaxSyclBuiltIn.hpp  MaxUniformSycl.hpp
include/alpaka/math/min/: MinGenericSycl.hpp  MinSycl.hpp  MinSyclBuiltIn.hpp  MinUniformSycl.hpp
include/alpaka/math/pow/: PowGenericSycl.hpp  PowSycl.hpp  PowSyclBuiltIn.hpp  PowUniformSycl.hpp
include/alpaka/math/remainder/: RemainderGenericSycl.hpp  RemainderSycl.hpp  RemainderSyclBuiltIn.hpp  RemainderUniformSycl.hpp
include/alpaka/math/round/: RoundSycl.hpp  (+3 more)
include/alpaka/meta/: Metafunctions.hpp
include/alpaka/pltf/: PltfCpuSyclIntel.hpp  PltfFpgaSyclIntel.hpp  PltfFpgaSyclXilinx.hpp  PltfGenericSycl.hpp  PltfGpuSyclIntel.hpp  PltfSycl.hpp  PltfUniformSycl.hpp
include/alpaka/queue/: QueueCpuSyclIntelBlocking.hpp  QueueCpuSyclIntelNonBlocking.hpp  QueueFpgaSyclIntelBlocking.hpp  QueueFpgaSyclIntelNonBlocking.hpp  QueueFpgaSyclXilinxBlocking.hpp  QueueFpgaSyclXilinxNonBlocking.hpp  QueueGenericSyclBlocking.hpp  QueueGenericSyclNonBlocking.hpp  QueueGpuSyclIntelBlocking.hpp  QueueGpuSyclIntelNonBlocking.hpp  QueueSyclAsync.hpp  QueueSyclBlocking.hpp  QueueSyclNonBlocking.hpp  QueueSyclSync.hpp
include/alpaka/standalone/: Sycl.hpp
include/alpaka/warp/: WarpGenericSycl.hpp
include/alpaka/workdiv/: WorkDivGenericSycl.hpp  WorkDivSycl.hpp  WorkDivSyclBuiltIn.hpp
test/catch_main/: CMakeLists.txt
test/common/: CMakeLists.txt
test/common/include/alpaka/test/: Check.hpp  KernelExecutionFixture.hpp
test/common/include/alpaka/test/acc/: TestAccs.hpp
test/common/include/alpaka/test/dim/: TestDims.hpp
test/common/include/alpaka/test/event/: EventHostManualTrigger.hpp
test/common/include/alpaka/test/mem/view/: ViewTest.hpp
test/common/include/alpaka/test/queue/: Queue.hpp
test/integ/axpy/: CMakeLists.txt
test/integ/axpy/src/: axpy.cpp
test/integ/separableCompilation/: CMakeLists.txt
(+84 files in other folders)
